initial projen project

--- a/.github/workflows/pull-request-lint.yml
+++ b/.github/workflows/pull-request-lint.yml
@@ -26,5 +26,10 @@ jobs:
           types: |-
             feat
             fix
+            build
             chore
+            ci
+            docs
+            style
+            refactor
           requireScope: false
