--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,13 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
+!/.mergify.yml
 !/.github/workflows/pull-request-lint.yml
+!/.github/workflows/auto-approve.yml
 !/package.json
 !/LICENSE
 !/.npmignore
 logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -29,14 +30,48 @@ jspm_packages/
 .eslintcache
 *.tgz
 .yarn-integrity
+__pycache__
+__pycache__/
+!.eslintrc.js
 .cache
+.coverage.*
+.coverage
+.DS_Store
+.env
+.mypy_cache
+.pytest_cache
+.Python
+.venv/
+.vscode
+*.js
+*.log
+*.manifest
+*.pyc
+*.spec
+*.zip
+**/cdk-test-report.xml
+*node_modules*
+build/
+coverage/
+dist/
+downloads/
+env/
+ENV/
+htmlcov/
+sdist/
+var/
+venv/
 /test-reports/
 junit.xml
 /coverage/
 !/.github/workflows/build.yml
-!/.mergify.yml
-!/.github/workflows/upgrade.yml
+/dist/changelog.md
+/dist/version.txt
+!/.github/workflows/release.yml
+!/.github/dependabot.yml
 !/.github/pull_request_template.md
+!/.prettierignore
+!/.prettierrc.json
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
