--- a/.npmignore
+++ b/.npmignore
@@ -4,7 +4,11 @@
 junit.xml
 /coverage/
 permissions-backup.acl
+/dist/changelog.md
+/dist/version.txt
 /.mergify.yml
+/.prettierignore
+/.prettierrc.json
 /test/
 /tsconfig.dev.json
 /src/
