--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "buildinginthecloud.com",
+  "description": "CDK code for buildingthecloud.com",
   "scripts": {
     "build": "npx projen build",
+    "bump": "npx projen bump",
     "bundle": "npx projen bundle",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
@@ -13,37 +15,50 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
-    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
+    "release": "npx projen release",
     "synth": "npx projen synth",
     "synth:silent": "npx projen synth:silent",
     "test": "npx projen test",
     "test:watch": "npx projen test:watch",
-    "upgrade": "npx projen upgrade",
+    "unbump": "npx projen unbump",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
+  "author": {
+    "name": "Yvo van Zee",
+    "email": "yvo@buildinginthecloud.com",
+    "url": "buildinginthecloud.com",
+    "organization": true
+  },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "^2",
+    "aws-cdk-github-oidc": "^2.4.1",
+    "commit-and-tag-version": "^12",
     "esbuild": "^0.25.2",
     "eslint": "^9",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
     "jest-junit": "^16",
-    "projen": "^0.91.20",
+    "prettier": "^3.5.3",
+    "projen": "0.91.20",
+    "projen-pipelines": "^0.2.5",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-github-oidc": "^2.4.1",
+    "aws-cdk-lib": "2.189.0",
+    "constructs": "^10.0.5",
+    "projen-pipelines": "^0.2.5"
   },
   "license": "Apache-2.0",
   "publishConfig": {
