--- a/.mergify.yml
+++ b/.mergify.yml
@@ -19,10 +19,11 @@ pull_request_rules:
       - check-success=build
       - check-success=test
     actions:
-      queue:
-        name: dependency-updates
-        method: squash
-        commit_message_template: "{{title}} (#{{number}})"
+      review:
+        type: APPROVE
+        message: Thanks for the PR! I will merge it now.
+      merge:
+        method: merge
   - name: Automatic merge on approval and successful build
     actions:
       delete_head_branch: {}
