--- a/.mergify.yml
+++ b/.mergify.yml
@@ -13,15 +13,18 @@ queue_rules:
 
       {{ body }}
 pull_request_rules:
-  - name: Automatic merge for Dependabot pull requests
-    conditions:
-      - author=dependabot[bot]
-      - check-success=build
-      - check-success=test
+  - name: Automatically approve dependency upgrade PRs if they pass build
     actions:
-      name: dependency-updates
-      method: squash
-      commit_message_template: "{{title}} (#{{number}})"
+      review:
+        type: APPROVE
+        message: Automatically approved dependency upgrade PR
+    conditions:
+      - label=auto-approve
+      - label=deps-upgrade
+      - -label~=(do-not-merge)
+      - status-success=build
+      - author=github-actions[bot]
+      - 'title="chore(deps): upgrade dependencies"'
   - name: Automatic merge on approval and successful build
     actions:
       delete_head_branch: {}
