--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "^2",
-    "aws-cdk-github-oidc": "^2.4.1",
     "esbuild": "^0.25.2",
     "eslint": "^9",
     "eslint-config-prettier": "^10.1.2",
@@ -45,16 +45,13 @@
     "jest-junit": "^16",
     "prettier": "^3.5.3",
     "projen": "0.91.29",
-    "projen-pipelines": "^0.2.5",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "aws-cdk-github-oidc": "^2.4.1",
     "aws-cdk-lib": "2.193.0",
-    "constructs": "^10.0.5",
-    "projen-pipelines": "^0.2.5"
+    "constructs": "^10.0.5"
   },
   "license": "Apache-2.0",
   "publishConfig": {
